# mcsbt

./: .gitignore
algorithms/: main.py
datathon/: Datathon.ipynb  Datathon_TFT.py  PMD.ipynb  SARIMAX.ipynb  SARIMAX.py  pyproject.toml  stallion.ipynb  tft_checkpoint.ckpt
discrete-math/ie-1020-problem/: MM1Queue.py  MMcQueue.py  MMcQueueSimulation.py  MultipleMM1Queues.py  discrete_event_simulation.py  queue_simulator.py  step_functions.py  workforce.py
distributed-systems/ChatApp/: client.py  server.py
operating-systems/os-lab2/: chat_history.txt  client.py  server.py
operating-systems/os-lab2/docker/: Dockerfile.client  Dockerfile.server
programming-with-python/: Individual_Assignment.ipynb
programming-with-python/group_exercise/: hello.py  main.py  password_manager.py  passwords.csv  pyproject.toml
programming-with-python/scraping/: idealista.html  main.py  scraping.ipynb  test.html
