[project]
name = "datathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "holidays>=0.61",
    "matplotlib>=3.9.3",
    "pandas>=2.2.3",
    "pytorch-forecasting>=1.2.0",
    "pytorch-lightning>=2.4.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
